[metadata]
name = robustflow
version = 1.2.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/robust-flow
description = Michael Black robust optical flow estimation
keywords =
  optical-flow
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  Operating System :: OS Independent
  Programming Language :: Python :: 3
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
include_package_data = True
install_requires =
  numpy
  imageio

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
